--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,4 @@
 <h2><%= @task.title %></h2>
 <p><%= @task.details %></p>
 
-<%= link_to 'Back to list', tasks_path %>
+<%= link_to 'Back to list.', tasks_path %>
