--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,10 @@
 <h1>My Tasks</h1>
-<ul>
+
+<div>
   <% @tasks.each do |task| %>
-    <li><%= link_to task.title, task_path(task) %></li>
+    <input type="checkbox" id="t<%= @task.id %>" checked="<%= @task.completed %>">
+    <label for="t<%= @task.id %>"><%= link_to @task.title, task_path(task) %></label>
   <% end %>
-</ul>
+</div>
+
+<%= link_to 'Add new task', new_task_path %>
